5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1723_2499.log
== TEST (2019-05-09 11:29:23) 
-- CODE:
from math import*
k =int(input(numero natural: )) 
x = 0
while(k>0):
	x = k-1
	w =   1/factorial(x)
	
	
print(round(w +1,8))	
-- ERROR:
File "XXXX", line 2
    k =int(input(numero natural: )) 
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:29:42) 
-- CODE:
from math import*
k =int(input("numero natural: ")) 
x = 0
while(k>0):
	x = k-1
	w =   1/factorial(x)
	
	
print(round(w +1,8))	
-- ERROR:
File "XXXX", line 2
    k =int(input(numero natural: )) 
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:31:30) 
-- CODE:
from math import*
k =int(input("numero natural: ")) 
x = 0
while(k>0):
	x = k-1
	w =   1/factorial(x)
	
	
print(round(w +1,8))	
-- ERROR:
File "XXXX", line 2
    k =int(input(numero natural: )) 
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:32:16) 
-- CODE:
from math import*
k =int(input("numero natural: ")) 
x = 0
while(k>0):
	k = k-1
	w =  1/factorial(x)
	
	
print(round(w +1,8))	
-- EXECUTION TIME:
0.351993
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.0
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:33:20) 
-- CODE:
from math import*
k =int(input("numero natural: ")) 
x = 0
while(k>0):
	#k = k-1
	x =  1/factorial(k)
	k = k-1
	
	
print(round(x +1,8))	
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:34:29) 
-- CODE:
from math import*
k =int(input("numero natural: ")) 
x = 0
while(k>0):
	#k = k-1
	x =  1/factorial(k)
	k = k-1
	
	
print(round(x +1,8))	
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:34:47) 
-- CODE:
from math import*
k =int(input("numero natural: ")) 
x = 0
while(k>0):
	k = k-1
	x =  1/factorial(k)
	#k = k-1
	
	
print(round(x +1,8))	
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:34:58) 
-- CODE:
from math import*
k =int(input("numero natural: ")) 
x = 0
while(k>0):
	k = k-1
	x =  1/factorial(k)
	#k = k-1
	
	
print(round(x +1,8))	
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:35:24) 
-- CODE:
from math import*
k =int(input("numero natural: ")) 
x = 0
while(k>0):
	k = k-1
	x =  1/factorial(k)
	#k = k-1
	
	
print(round(x ,8))	
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:35:28) 
-- CODE:
from math import*
k =int(input("numero natural: ")) 
x = 0
while(k>0):
	k = k-1
	x =  1/factorial(k)
	#k = k-1
	
	
print(round(x ,8))	
-- EXECUTION TIME:
0.136765
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.0
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:35:32) 
-- CODE:
from math import*
k =int(input("numero natural: ")) 
x = 0
while(k>0):
	k = k-1
	x =  1/factorial(k)
	#k = k-1
	
	
print(round(x ,8))	
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:35:36) 
-- CODE:
from math import*
k =int(input("numero natural: ")) 
x = 0
while(k>0):
	k = k-1
	x =  1/factorial(k)
	#k = k-1
	
	
print(round(x ,8))	
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:37:40) 
-- CODE:
from math import*
k =int(input("numero natural: ")) 
x = 0
while(k>0):
	k = k-1
	x =  1/factorial(k) +1
	#k = k-1
	
	
print(round(x ,8))	
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:37:51) 
-- CODE:
from math import*
k =int(input("numero natural: ")) 
x = 0
while(k>0):
	k = k-1
	x =  1/factorial(k) 
	#k = k-1
	
	
print(round(x ,8))	
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:55) 
-- CODE:
from math import*
k =int(input("numero natural: ")) 
x = 0
s = 0
fim = k-1
while(x<=fim):
	s = s 1/factorial(x)
	x = x+1 
	
	
	
	
print(round(s ,8))	
-- ERROR:
File "XXXX", line 7
    s = s 1/factorial(x)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:47:10) 
-- CODE:
from math import*
k =int(input("numero natural: ")) 
x = 0
s = 0
fim = k-1
while(x<=fim):
	s = s +1/factorial(x)
	x = x+1 
	
	
	
	
print(round(s ,8))	
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:48:56) 
-- CODE:
from math import*
k =int(input("numero natural: ")) 
x = 0
s = 0
fim = k-1
while(x<=fim):
	s = s +1/factorial(x)
	x = x+1 
	
	
	
	
print(round(s ,8))	
-- EXECUTION TIME:
0.147463
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
